--- a/_includes/section_intro.html
+++ b/_includes/section_intro.html
@@ -4,8 +4,7 @@
 	</div>
 	<div class="content-rounded-panel">
 		<div id="introBlurb">
-			I am a Senior Engineer working at Covestor, having previously spent over 6 years as a technical consultant at Accenture, giving me a good blend of enterprise and start-up experience. <br/><br/>
-			I enjoy creating great products with great user experiences and working in a dynamic environment with a focus on good development practices, automation and shipping small, frequent releases.
+			I am a Ph.D. student with a research focus in musculoskeletal biomechanics at the University of Wisconsin-Madison. My research interests involve experimental biomechanics and modeling, as well as the development of intraoperative sensors to enhance surgical procedures, such as total knee arthroplasty. I am currently working on a project involving the evaluation of a novel shear wave tensiometer to assess ligament tension during a TKA procedure.
 		</div>
 		<br>
 	</div>
