--- a/_includes/section_awards.html
+++ b/_includes/section_awards.html
@@ -5,7 +5,22 @@
 		</div>
 		<div class="content-rounded-panel">
 			<div>
-				{{site.awards}}
+				<table class="table table-striped table-hover table-condensed">
+				<thead>
+					<tr>
+						<th><a style="cursor: pointer;">Institution</a></th>
+						<th class="hidden-sm hidden-xs" ><a style="cursor: pointer;">Awards</a></th>
+					</tr>
+				</thead>
+				<tbody>
+					{% for awards in site.awards %}
+						<tr>
+							<td>{{awards.institution}}</td>
+							<td class="hidden-sm hidden-xs" >{{awards.description}}</td>
+						</tr>
+					{% endfor %}
+				</tbody>
+			</table>
 			</div>
 			<br>
 		</div>
