--- a/_includes/section_github.html
+++ b/_includes/section_github.html
@@ -1,4 +1,5 @@
-{% if !site.github %}
+/*
+{% if site.github %}
 	<div class="rounded_panel txt_lightgrey">
 		<div class="top-rounded-panel grey-bg">
 			<h1>Some projects I am Working On</h1>
@@ -24,3 +25,4 @@
 		</div>
 	</div>
 {% endif %}
+*/
