--- a/_includes/section_fabskills.html
+++ b/_includes/section_fabskills.html
@@ -1,12 +1,12 @@
 <div id="skillsBubble" class="rounded_panel txt_lightgrey">
 	<div class="top-rounded-panel grey-bg">
-		<h1 id="user-skills">Fabrication Skills</h1>
+		<h1 id="user-fabskills">Fabrication Skills</h1>
 	</div>
 	<div class="content-rounded-panel">
 
 		<div id="fabskills">
 			{% for skill in site.fabskills %}
-				<span class="label label-info label-padded"> {{fabskill}} </span> &nbsp;  
+				<span class="label label-info label-padded"> {{skill}} </span> &nbsp;  
 			{% endfor %}
 		</div>
 	</div>
