--- a/_includes/section_awards.html
+++ b/_includes/section_awards.html
@@ -16,7 +16,9 @@
 					{% for awards in site.awards %}
 						<tr>
 							<td>{{awards.institution}}</td>
-							<td class="hidden-sm hidden-xs" >{{awards.description}}</td>
+							{% for instituton in site.awards.institution %}
+								<td class="hidden-sm hidden-xs" >{{awards.description}}</td>
+							{% endfor %}
 						</tr>
 					{% endfor %}
 				</tbody>
