--- a/_includes/section_awards.html
+++ b/_includes/section_awards.html
@@ -16,7 +16,7 @@
 					{% for awards in site.awards %}
 						<tr>
 							<td>{{awards.institution}}</td>
-							{% for instituton in site.awards %}
+							{% for description in site.awards %}
 								<td class="hidden-sm hidden-xs" >{{awards.description}}</td>
 							{% endfor %}
 						</tr>
