--- a/_includes/section_awards.html
+++ b/_includes/section_awards.html
@@ -16,9 +16,9 @@
 					{% for awards in site.awards %}
 						<tr>
 							<td>{{awards.institution}}</td>
-							{% for description in site.awards %}
-								<td class="hidden-sm hidden-xs" >{{awards.description}}</td>
-							{% endfor %}
+				
+							<td class="hidden-sm hidden-xs" >{{awards.description}}</n></td>
+							
 						</tr>
 					{% endfor %}
 				</tbody>
